# clog-cli

./: .clog.toml  .gitignore  .travis.yml  .typos.toml  Cargo.toml  LICENSE  Makefile  README.md  changelog.md  index.html  rustfmt.toml
.github/workflows/: ci-pr.yml  lint.yml  release_nightly.yml  security_audit.yml
ci/: before_deploy.sh  script.sh
docs/: search-index.js
docs/aho_corasick/: index.html  struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Transitions.html  type.StateIdx.html
docs/ansi_term/: enum.Colour.html  index.html  struct.ANSIString.html  struct.ANSIStrings.html  struct.Style.html
docs/clap/: enum.Format.html  index.html  macro.arg_enum!.html  macro.crate_version!.html  macro.simple_enum!.html  macro.value_t!.html  macro.value_t_or_exit!.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.SubCommand.html
docs/clog/: enum.LinkStyle.html  index.html  sidebar-items.js  struct.Clog.html  struct.LogWriter.html  struct.SectionMap.html
docs/memchr/: fn.memchr.html
docs/regex/: enum.Error.html  enum.Regex.html  fn.is_match.html  fn.quote.html  index.html  struct.Captures.html  struct.FindCaptures.html  struct.FindMatches.html  struct.NoExpand.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html  trait.Replacer.html
docs/regex_syntax/: enum.ErrorKind.html  enum.Expr.html  enum.Repeater.html  fn.quote.html  index.html  struct.CharClass.html  struct.ClassRange.html  struct.Error.html  type.Result.html
docs/rustc_serialize/: index.html  trait.Decodable.html  trait.DecoderHelpers.html  trait.Encodable.html  trait.EncoderHelpers.html
src/: cli.rs  clog.rs  clogconfig.rs  common.rs  error.rs  fmt.rs  format_util.rs  git.rs  lib.rs  log_writer.rs  logentry.rs  macros.rs  main.rs  section_builder.rs  sectionmap.rs
src/fmt/: mod.rs  (+2 more)
(+205 files in other folders)
