[package]
repository = "https://github.com/clog-tool/clog-cli"
readme = "README.md"
keywords = ["git", "log", "changelog", "parser", "parse"]
license = "MIT"
name = "clog-cli"
edition = "2021"
version = "0.10.0"
rust-version = "1.74.1" # msrv
authors = ["Christoph Burgdorf <christoph.burgdorf@bvsn.org>"]
description = "A conventional changelog for the rest of us"
exclude = ["docs/*"]

[[bin]]
name = "clog"
path = "src/main.rs"

[dependencies]
semver = "1.0.0"
clap = { version = "4", features = ["derive", "wrap_help"] }
clog = "0.11.0"
ansi_term = { version = "0.12.0", optional = true }
strum = { version = "0.26.3", features = ["derive"] }

[features]
default = ["color"]

color = ["ansi_term"]

# For debugging output
debug = []

unstable = []
